--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "scripts": {
     "build": "tsc",
-    "test": "vitest",
+    "test": "vitest run",
     "test:coverage": "vitest --coverage",
     "test:watch": "vitest --watch",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "check": "tsc --noEmit",
     "dev": "vitest --watch",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "generate:schemas": "tsx scripts/generate-schemas.ts"
   },
   "keywords": [
     "notion",
@@ -34,12 +35,17 @@
   },
   "devDependencies": {
     "@notionhq/client": "^4.0.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.30.1",
+    "fs-extra": "^11.1.1",
     "prettier": "^3.6.2",
+    "ts-morph": "^26.0.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
