--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A type-safe, reactive Notion SDK with schema validation and fluent API",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "sideEffects": false,
   "engines": {
     "node": ">=18"
   },
@@ -34,6 +35,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.47.5",
     "@notionhq/client": "^4.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.0.13",
