--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     },
     "types": ["vitest/globals"]
   },
-  "include": ["./src/**/*"],
+  "include": ["./src", "./test"],
   "exclude": ["**/*.test.ts"]
 }
