--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
   "dependencies": {
     "ansis": "^4.1.0",
     "arktype": "^2.1.20",
+    "cli-progress": "^3.12.0",
+    "ora": "^8.2.0",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.5",
     "@notionhq/client": "^4.0.1",
+    "@types/cli-progress": "^3.11.6",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
