--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@ark/attest": "^0.48.2",
     "@dotenvx/dotenvx": "^1.47.5",
     "@notionhq/client": "^4.0.1",
     "@types/cli-progress": "^3.11.6",
