--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,5 @@
     },
     "types": ["vitest/globals"]
   },
-  "include": ["./src", "./test"],
-  "exclude": ["**/*.test.ts"]
+  "include": ["./src", "./test"]
 }
