--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@notionkit/sdk",
+  "type": "module",
+  "name": "@notion.codes/sdk",
   "version": "0.1.0",
   "description": "A type-safe, reactive Notion SDK with schema validation and fluent API",
   "main": "./dist/index.js",
@@ -10,15 +11,14 @@
   },
   "scripts": {
     "build": "tsc",
+    "clean": "find . -type d \\( -name 'node_modules' -o -name 'dist' \\) -exec rm -rf {} + && find . -name 'p*-lock.*' -delete",
     "test": "vitest run",
     "test:coverage": "vitest --coverage run",
     "test:watch": "vitest --watch",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "check": "tsc --noEmit",
-    "dev": "vitest --watch",
-    "clean": "rm -rf dist",
-    "generate:schemas": "tsx scripts/generate-schemas.ts"
+    "dev": "vitest --watch"
   },
   "keywords": [
     "notion",
@@ -30,6 +30,7 @@
     "type-safe"
   ],
   "dependencies": {
+    "@mateothegreat/ts-kit": "^0.0.32",
     "ansis": "^4.1.0",
     "arktype": "^2.1.20",
     "cli-progress": "^3.12.0",
@@ -38,16 +39,17 @@
   },
   "devDependencies": {
     "@ark/attest": "^0.48.2",
-    "@dotenvx/dotenvx": "^1.47.5",
+    "@dotenvx/dotenvx": "^1.47.6",
+    "@notion.codes/types": "workspace:*",
     "@notionhq/client": "^4.0.1",
     "@types/cli-progress": "^3.11.6",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^8.36.0",
-    "@typescript-eslint/parser": "^8.36.0",
+    "@types/node": "^24.0.14",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.30.1",
-    "fs-extra": "^11.1.1",
+    "eslint": "^9.31.0",
+    "fs-extra": "^11.3.0",
     "prettier": "^3.6.2",
     "ts-morph": "^26.0.0",
     "ts-node": "^10.9.2",
